--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
   <header>
       <nav class="container">
           <h1>DSMovie</h1>
-          <a href="https://github.com/devsuperior">/devsuperior</a>
+           <div>
+            <img src="img/github.svg" alt="Github">
+            <a href="https://github.com/devsuperior">/devsuperior</a>
+           </div>
       </nav>
-
-  </header>
+   </header>
 </body>
 </html>
