Componente de paginação

--- a/form.html
+++ b/form.html
@@ -30,7 +30,7 @@
                 <div>
                     <div class="dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/original/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
-                            alt="The Witcher"/>
+                            alt="The Witcher">
                         <div class="dsmovie-form-description">
                             <h3>The Batman</h3>
                             <form class="dsmovie-form">
