Polimento da listagem

--- a/index.html
+++ b/index.html
@@ -57,7 +57,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/ctxm191q5o3axFzQsvNPlbKoSYv.jpg"alt="The Witcher">
                      <div class="dsmovie-card-description">
                         <h3>Pacificador</h3>
-                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        <div class="dsmovie-card-description-buttom">
+                            <h4>3.8</h4>
+                            <div>
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-half.svg" alt="Star">
+                              <img src="img/star-empty.svg" alt="Star">  
+                            </div>
+                            <p>10 avaliações</p>
+                         <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
              </div>    
@@ -67,7 +78,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/o76ZDm8PS9791XiuieNB93UZcRV.jpg"alt="The Witcher">
                      <div class="dsmovie-card-description">
                         <h3>RESIDENTE EVIL: Bem-vindo a raccon city</h3>
-                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        <div class="dsmovie-card-description-buttom">
+                            <h4>3.8</h4>
+                            <div>
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-half.svg" alt="Star">
+                              <img src="img/star-empty.svg" alt="Star">  
+                            </div>
+                            <p>10 avaliações</p>
+                         <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
              </div>    
@@ -77,7 +99,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/nvxrQQspxmSblCYDtvDAbVFX8Jt.jpg"alt="The Witcher">
                      <div class="dsmovie-card-description">
                         <h3>Não Olhe Para Cima</h3>
-                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        <div class="dsmovie-card-description-buttom">
+                            <h4>3.8</h4>
+                            <div>
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-half.svg" alt="Star">
+                              <img src="img/star-empty.svg" alt="Star">  
+                            </div>
+                            <p>10 avaliações</p>
+                         <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
              </div>    
@@ -87,7 +120,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/3G1Q5xF40HkUBJXxt2DQgQzKTp5.jpg"alt="The Witcher">
                      <div class="dsmovie-card-description">
                         <h3>Encanto</h3>
-                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        <div class="dsmovie-card-description-buttom">
+                            <h4>3.8</h4>
+                            <div>
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-half.svg" alt="Star">
+                              <img src="img/star-empty.svg" alt="Star">  
+                            </div>
+                            <p>10 avaliações</p>
+                         <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
              </div>    
@@ -97,7 +141,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/eNI7PtK6DEYgZmHWP9gQNuff8pv.jpg"alt="The Witcher">
                      <div class="dsmovie-card-description">
                         <h3>Matrix Resurrections</h3>
-                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        <div class="dsmovie-card-description-buttom">
+                            <h4>3.8</h4>
+                            <div>
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-half.svg" alt="Star">
+                              <img src="img/star-empty.svg" alt="Star">  
+                            </div>
+                            <p>10 avaliações</p>
+                         <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
              </div>    
@@ -107,7 +162,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg"alt="The Witcher">
                      <div class="dsmovie-card-description">
                         <h3>The Witcher</h3>
-                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        <div class="dsmovie-card-description-buttom">
+                            <h4>3.8</h4>
+                            <div>
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-half.svg" alt="Star">
+                              <img src="img/star-empty.svg" alt="Star">  
+                            </div>
+                            <p>10 avaliações</p>
+                         <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
              </div>    
@@ -117,7 +183,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/iQFcwSGbZXMkeyKrxbPnwnRo5fl.jpg"alt="The Witcher">
                      <div class="dsmovie-card-description">
                         <h3>Spider-man: Sem Volta Para Casa</h3>
-                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        <div class="dsmovie-card-description-buttom">
+                            <h4>5</h4>
+                            <div>
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-half.svg" alt="Star">
+                              <img src="img/star-empty.svg" alt="Star">  
+                            </div>
+                            <p>10 avaliações</p>
+                         <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
              </div>    
@@ -127,7 +204,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/p3ajeXwrCczDh8eYsT8ryTvvfwm.jpg"alt="The Witcher">
                      <div class="dsmovie-card-description">
                         <h3>Emboscada</h3>
-                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        <div class="dsmovie-card-description-buttom">
+                            <h4>3.8</h4>
+                            <div>
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-half.svg" alt="Star">
+                              <img src="img/star-empty.svg" alt="Star">  
+                            </div>
+                            <p>10 avaliações</p>
+                         <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
              </div>    
@@ -137,7 +225,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/1bjoIR8Yb3qDrflszNWlz9uo2JF.jpg"alt="The Witcher">
                      <div class="dsmovie-card-description">
                         <h3>Tokyo Ghoul</h3>
-                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        <div class="dsmovie-card-description-buttom">
+                            <h4>3.8</h4>
+                            <div>
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-half.svg" alt="Star">
+                              <img src="img/star-empty.svg" alt="Star">  
+                            </div>
+                            <p>10 avaliações</p>
+                         <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
              </div>    
@@ -147,7 +246,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/g0YNGpmlXsgHfhGnJz3c5uyzZ1B.jpg"alt="The Witcher">
                      <div class="dsmovie-card-description">
                         <h3>O Beco do Pesadelo</h3>
-                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        <div class="dsmovie-card-description-buttom">
+                            <h4>3.8</h4>
+                            <div>
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-half.svg" alt="Star">
+                              <img src="img/star-empty.svg" alt="Star">  
+                            </div>
+                            <p>10 avaliações</p>
+                         <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
              </div>    
@@ -157,7 +267,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jorgjEk6a0bed6jdR5wu4S6ZvRm.jpg"alt="The Witcher">
                      <div class="dsmovie-card-description">
                         <h3>Liga da Justiça</h3>
-                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        <div class="dsmovie-card-description-buttom">
+                            <h4>4.9</h4>
+                            <div>
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-full.svg" alt="Star">
+                              <img src="img/star-half.svg" alt="Star">
+                              <img src="img/star-empty.svg" alt="Star">  
+                            </div>
+                            <p>10 avaliações</p>
+                         <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
              </div>    
