--- a/form.html
+++ b/form.html
@@ -24,50 +24,41 @@
         </nav>
     </header>
 
-
     <main>
         <section id="dsmovie-form-section">
-
             <div class="container dsmovie-from-container">
-
                 <div>
                     <div class="dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/original/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
-                            alt="The Witcher">
+                            alt="The Witcher"/>
                         <div class="dsmovie-form-description">
                             <h3>The Batman</h3>
-                             <form class="dsmovie-form">
-
-                              <div class="form-group dsmovie-form-group">
-                                  <label for="email">Informe seu email</label>
-                                  <imput class="form-control" type="email" id="email">
-                              </div>
-                              <div class="form-group dsmovie-form-group">
-                                  <label for="score">Informe sua avaliação</label>
-                                  <select class="form-control" name="score" id="score">
-                                      <option value="1">1</option>
-                                      <option value="2">2</option>
-                                      <option value="3">3</option>
-                                      <option value="4">4</option>
-                                      <option value="5">5</option>
-                                   </select>   
-                              </div>
-                              <div class="dsmovie-form-btn-container">
-                                 <button class="dsmovie-btn" type="submit">Salvar</button> 
-                                <a class="dsmovie-btn" href="index.html">Cancelar</a>
-                              </div>
+                            <form class="dsmovie-form">
+                                <div class="form-group dsmovie-form-group">
+                                    <label for="email">Informe seu email</label>
+                                    <input class="form-control" type="email" id="email">
+                                </div>
+                                <div class="form-group dsmovie-form-group">
+                                    <label for="score">Informe sua avaliação</label>
+                                    <select class="form-control" name="score" id="score">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                    </select>
+                                </div>
+                                <div class="dsmovie-form-btn-container">
+                                    <button class="dsmovie-btn" type="submit">Salvar</button>
+                                    <a class="dsmovie-btn" href="index.html">Cancelar</a>
+                                </div>
                             </form>
-                           
                         </div>
                     </div>
                 </div>
-
             </div>
-
         </section>
-
     </main>
-
 </body>
 
 </html>
