--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
              <div class="col-sm-6 col-lg-4 col-xl-3  mb-3">
                 <div class="dsmovie-card">
-                    <img src="https://www.themoviedb.org/t/p/original/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"alt="The Witcher">
+                    <img src="https://image.tmdb.org/t/p/w533_and_h300_bestv2/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"alt="The Witcher">
                      <div class="dsmovie-card-description">
                         <h3>The Batman</h3>
                        <div class="dsmovie-card-description-buttom">
