--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -29,8 +29,7 @@
             <div class="container dsmovie-from-container">
                 <div>
                     <div class="dsmovie-card">
-                        <img src="hhttps://image.tmdb.org/t/p/w533_and_h300_bestv2/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
-                            alt="The Witcher">
+                        <img src="https://image.tmdb.org/t/p/w533_and_h300_bestv2/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg" alt="The Witcher">
                         <div class="dsmovie-form-description">
                             <h3>The Batman</h3>
                             <form class="dsmovie-form">
